fix: resolve contrast themes issue with building block icons

--- a/src/assets/styles/pages/_home.scss
+++ b/src/assets/styles/pages/_home.scss
@@ -132,23 +132,23 @@
         }
 
         .block-icon .stroke {
-            fill: currentColor;
+            fill: var(--fl-fgColor, currentColor);
         }
 
         .block-icon .face-yellow-300 .face {
-            fill: var(--fl-fgColor, var(--yellow-300));
+            fill: var(--fl-bgColor, var(--yellow-300));
         }
 
         .block-icon .face-red-100 .face {
-            fill: var(--fl-fgColor, var(--red-100));
+            fill: var(--fl-bgColor, var(--red-100));
         }
 
         .block-icon .face-blue-200 .face {
-            fill: var(--fl-fgColor, var(--blue-200));
+            fill: var(--fl-bgColor, var(--blue-200));
         }
 
         .block-icon .face-green-200 .face {
-            fill: var(--fl-fgColor, var(--green-200));
+            fill: var(--fl-bgColor, var(--green-200));
         }
     }
 }
